Bug 162603 - Labels cut off in Application Colors option screen (kf5/kf6, Windows)
Summary: Labels cut off in Application Colors option screen (kf5/kf6, Windows)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
: 162640 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-24 07:08 UTC by Buovjaga
Modified: 2024-08-26 13:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-08-24 07:08:50 UTC
1. Run with kf5 or kf6
2. Tools - Options - LibreOffice - Application Colors

Observe the labels in the User interface elements column. "Spelling mistakes", "Headers and Footer delimiter" are examples where the last character is cut off.

Bibisect repo linux-64-25.2 doesn't show it yet, having its last commit from 19 Aug at the moment.

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5dbc995f73da45ad99b95bc3119c75451b2c415d
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 23 August 2024
Comment 1 Buovjaga 2024-08-24 07:09:46 UTC
Reported in dev chat, so setting to NEW.
Comment 2 Buovjaga 2024-08-24 07:25:35 UTC
Oh, I do see this on Windows as well - the cuttings are not exactly the same as with KDE. Clearly seen in "Headers and Footer delimiter".

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8843081f91e206b4749b83b186caaceaf1f8c4e3
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-GB
Calc: threaded
Comment 3 Buovjaga 2024-08-24 07:47:49 UTC
Bibisected with Windows 25.2 repo to 560e5406f3c6e8e6ed0f1c251b6910465266ed8d
tdf#153966 vcl: Fix precision loss laying out right-aligned text
Comment 4 Commit Notification 2024-08-26 12:18:04 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f18d56d298cc9ec9c1c6e0ad4ffce63afc40e2c2

tdf#162603 vcl: Fix sporadic non-subpixel label cutoff

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Jonathan Clark 2024-08-26 12:20:53 UTC
Thanks for the bisect.
Comment 6 Rafael Lima 2024-08-26 12:42:06 UTC
Could bug 162640 be related to this as well?
Comment 7 Buovjaga 2024-08-26 13:06:20 UTC
Thanks, verified.

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a0576db4b7c0e2597e71d454c87f43ffda74fd2
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 26 August 2024
Comment 8 Rafael Lima 2024-08-26 13:33:58 UTC
*** Bug 162640 has been marked as a duplicate of this bug. ***