tdf#162603 vcl: Fix sporadic non-subpixel label cutoff

Fixes an issue causing occasional truncation of the final column of
pixels when rendering text without subpixel positioning.

Partially reverts
commit 560e5406f3c6e8e6ed0f1c251b6910465266ed8d.
tdf#153966 vcl: Fix precision loss laying out right-aligned text

Change-Id: I9372e842c8bea59dd8e6d87a8b6887ba7e34897b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172388
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>